<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/zorro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:contentDescription="@string/zorro"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/zorro"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/toro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/toro"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/toro" />

            <ImageButton
                android:id="@+id/tigre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:contentDescription="@string/tigre"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/tigre" />

            <ImageButton
                android:id="@+id/pollito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/pollito"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/pollito"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/panda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:contentDescription="@string/panda"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/panda"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/cerdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/cerdo"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/cerdo"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/cangrejo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:contentDescription="@string/cangrejo"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/cangrejo" />

            <ImageButton
                android:id="@+id/ballena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/ballena"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/ballena" />

            <ImageButton
                android:id="@+id/armadillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:contentDescription="@string/armadillo"
                android:onClick="onClickAnimal"
                app:srcCompat="@drawable/armadillo" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>